syntax = "proto3";

package code_execution;

service CodeExecutionService {
  
}
