syntax = "proto3";

package request_metadata;

message RequestMetadata {
  string tenantId = 1;
  string userId = 2;
}